reports/11.handling_Str.log
Traceback (most recent call last):
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\sungmooklim\anaconda3\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\sungmooklim\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# ë¬¸ìì—´ ì²˜ë¦¬ ê´€ë ¨ í•¨ìˆ˜. 
>> 1. split --> í•´ë‹¹ obstacleì„ ê¸°ì¤€ìœ¼ë¡œ ë¬¸ìì—´ì„ ë‚˜ëˆˆë‹¤.
>>> df[].str.split('-')

>> 2. replace --> í•´ë‹¹ obstacleì„ ë‹¤ë¥¸ ê²ƒìœ¼ë¡œ ëŒ€ì²´í•œë‹¤. 
>>> df[].str.replace('-','') -ë¥¼ ê³µë°±ì—†ëŠ” ì¹¸ìœ¼ë¡œ ë§¤ìš´ë‹¤.

>> 3. strip --> ê°’ì— ê³µë°±ë§Œ ì¡´ì¬í•˜ëŠ” ê²½ìš°, ë¬¸ìì—´ ê°’ì˜ ì•ë’¤ë¡œ ê³µë°±ì´ ì¡´ì¬í•˜ëŠ” ê²½ìš° ì´ë¥¼ ì—†ì• ê³  ì‹¶ì„ë•Œ 
>>> df[].str.strip()  

>> 4. str  -->ì›í•˜ëŠ” ë¶€ë¶„ì˜ ë¬¸ìì—´ë§Œ ëˆê³  ì‹¶ì„ë•Œ
>>> dataframe['series'].str[:] 
------------------

[1;36m  Input [1;32mIn [1][1;36m[0m
[1;33m    >> 1. split --> í•´ë‹¹ obstacleì„ ê¸°ì¤€ìœ¼ë¡œ ë¬¸ìì—´ì„ ë‚˜ëˆˆë‹¤.[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (1595970462.py, line 2)

